--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-saga-model",
-  "version": "0.0.9.1",
+  "version": "0.0.91",
   "dependencies": {
     "@types/react-router": "2.x",
     "@types/react-router-redux": "^4.0.40",
@@ -56,5 +56,6 @@
     "build": "rimraf lib && babel src --out-dir lib"
   },
   "author": "tangzixiang <tomson_tang@yeah.net>",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": "https://github.com/tomsonTang/redux-saga-model.git"
 }
