--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "react": "15.x"
   },
   "devDependencies": {
+    "antd": "^2.12.6",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "browserify": "^14.4.0",
-    "browserify-shim": "^3.8.14",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.0",
     "envify": "^4.0.0",
@@ -47,14 +47,24 @@
     "jsdom": "^9.5.0",
     "mocha": "^3.4.2",
     "nyc": "^11.0.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-boilerplate-app-scripts": "^0.0.26",
+    "react-dom": "^15.6.1",
+    "redux-devtools": "^3.4.0",
     "rimraf": "^2.6.1",
     "uglifyjs": "^2.4.11"
   },
   "main": "lib/index.js",
   "scripts": {
-    "build": "rimraf lib && babel src --out-dir lib"
+    "build": "rimraf lib && babel src --out-dir lib",
+    "start-demo": "react-boilerplate-app-scripts start"
+  },
+  "react-boilerplate-app-scripts": {
+    "appSrcPath": "example/users",
+    "appPublicPath": "public"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "author": "tangzixiang <tomson_tang@yeah.net>",
   "license": "ISC",
