--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "redux-saga-model",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "dependencies": {
-    "@types/react-router": "2.x",
-    "@types/react-router-redux": "^4.0.40",
-    "babel-polyfill": "^6.23.0",
-    "babel-runtime": "^6.23.0",
     "flatten": "^1.0.2",
     "global": "^4.3.2",
     "invariant": "^2.2.1",
@@ -13,8 +9,6 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash.isfunction": "^3.0.8",
     "react-redux": "^5.0.5",
-    "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-saga": "^0.15.3",
     "warning": "^3.0.0"
@@ -23,6 +17,12 @@
     "react": "15.x"
   },
   "devDependencies": {
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.8",
+    "@types/react-router": "2.x",
+    "@types/react-router-redux": "^4.0.40",
+    "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.23.0",
     "antd": "^2.12.6",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
@@ -57,7 +57,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rimraf lib && babel src --out-dir lib",
-    "start-demo": "react-boilerplate-app-scripts start"
+    "start-demo": "react-boilerplate-app-scripts start",
+    "build-demo": "react-boilerplate-app-scripts build"
   },
   "react-boilerplate-app-scripts": {
     "appSrcPath": "example/users",
