--- a/package.json
+++ b/package.json
@@ -17,13 +17,8 @@
     "react": "15.x"
   },
   "devDependencies": {
-    "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.8",
-    "@types/react-router": "2.x",
-    "@types/react-router-redux": "^4.0.40",
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
-    "antd": "^2.12.6",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -33,32 +28,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "coveralls": "^2.13.1",
-    "cross-env": "^5.0.0",
-    "envify": "^4.0.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
-    "expect": "^1.20.2",
-    "husky": "^0.13.4",
-    "jsdom": "^9.5.0",
-    "mocha": "^3.4.2",
-    "nyc": "^11.0.1",
     "react": "^15.6.1",
-    "react-boilerplate-app-scripts": "^0.0.26",
-    "react-dom": "^15.6.1",
-    "redux-devtools": "^3.4.0",
-    "rimraf": "^2.6.1",
-    "uglifyjs": "^2.4.11"
+    "rimraf": "^2.6.1"
   },
   "main": "lib/index.js",
   "scripts": {
-    "build": "rimraf lib && babel src --out-dir lib",
-    "start-demo": "react-boilerplate-app-scripts start",
-    "build-demo": "react-boilerplate-app-scripts build"
+    "build": "rimraf lib && babel src --out-dir lib"
   },
   "react-boilerplate-app-scripts": {
     "appSrcPath": "example/users",
