--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-saga-model",
-  "version": "0.1.3",
+  "version": "0.1.31",
   "dependencies": {
     "flatten": "^1.0.2",
     "global": "^4.3.2",
@@ -8,7 +8,6 @@
     "is-plain-object": "^2.0.3",
     "isomorphic-fetch": "^2.2.1",
     "lodash.isfunction": "^3.0.8",
-    "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-saga": "^0.15.3",
     "warning": "^3.0.0"
@@ -19,7 +18,6 @@
   "devDependencies": {
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
-    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^4.1.4",
@@ -29,6 +27,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "react": "^15.6.1",
+    "jsdom": "^9.5.0",
+    "mocha": "^3.4.2",
     "rimraf": "^2.6.1"
   },
   "main": "lib/index.js",
