--- a/example/users/package.json
+++ b/example/users/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "redux-saga-model-loading": "^0.0.3"
   },
   "peerDependencies": {
