--- a/example/simple-catch-error/package.json
+++ b/example/simple-catch-error/package.json
@@ -19,7 +19,7 @@
     "redux-saga-model": "^0.1.31"
   },
   "scripts": {
-    "start": "node ./src/mian.js"
+    "start": "node src/main.js"
   },
   "dependencies": {
     "redux": "^3.7.2",
